k8s-twitter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - name: twitter
          image: twitter-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: twitter-service-k8s
spec:
  type: ClusterIP
  selector:
    app: twitter
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: http
