k8s-ums.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
    spec:
      containers:
        - name: ums
          image: ums-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ums-service
spec:
  type: ClusterIP
  selector:
    app: ums
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
